<resources>
    <string name="app_name">Cardict</string>
    <string name="firebase_key">ilsyA81vr9UygsO6OoJNwnA2pBo1</string>
    <string name="logo_width">20</string>

    <!-- MainActivity -->

    <string name="success_login">로그인 되었습니다.</string>
    <string name="failed_login">로그인에 실패하였습니다.</string>
    <string name="facebook_app_id">884710338595518</string>
    <string name="google_map_api_key">AIzaSyDtzD-CDvyhvklAv8riCF3X0QifO6e7cmc</string>
    <string name="aed_api_key">o6Ea0CAH7jCtTwXGrSM8WWWyEGtMDjmxQJBi7pUh%2Fn5Ec4tEPWIKzx%2Fe8YuOKCb2jwn5CqwAcxrqVD6rNRsFwg%3D%3D</string>
    <string name="fb_login_protocol_scheme">fb884710338595518</string>
    <string name="permission_failed1">퍼미션이 거부되었습니다. 앱을 다시 실행하여 퍼미션을 허용해주세요.</string>
    <string name="permission_failed2">퍼미션이 거부되었습니다. 설정(앱 정보)에서 퍼미션을 허용해야 합니다.</string>

    <!-- CardioPredictActivity -->

    <string name="predict_info">님의 예상 심혈관질환 발병률</string>
    <string name="TenYearsLater">10년 후 발병률</string>
    <string name="lowChol">콜레스테롤을 낮출 경우 발병률</string>
    <string name="lowAphi">혈압을 낮출 경우 발병률</string>
    <string name="nonSmoke">비흡연할 경우 발병률</string>
    <string name="Pct20">건강 관리를 잘하고 계시네요!</string>
    <string name="Pct40">조금 더 건강에 신경써주세요.</string>
    <string name="Pct70">심장이 건강하지 않습니다. 더욱 더 주의를 귀울여 주세요.</string>
    <string name="Pct100">당신의 심장이 매우 위험합니다. 의사의 진찰을 받아보세요.</string>

    <!-- HomeActivity -->
    <string name="dataInputBtnText">내 정보 입력하기</string>
    <string name="predictBtnText">심혈관질환 예측하기</string>
    <string name="bpmBtnText">심박수 측정하기</string>
    <string name="aedBtnText">주변 AED 찾아보기</string>
    <string name="appName">C a r d i c t</string>

    <!-- HeartAnim -->
    <string name="heartpath_origin">
        M 6 52 L 27 52 L 32 51 L 36 55 L 46 26 L 56 69 L 61 50 L 66 56 L 70 50 L 74 52 L 94 52
    </string>
    <string name="heartpath">
        M 6 52 L 27 52 L 32 51 L 36 55 L 46 26 L 56 69 L 61 50 L 66 56 L 70 50 L 74 52 L 94 52 M 6 52 L 27 52 L 32 51
    </string>
    <string name="dash">-</string>
    <string name="min_bpm">40</string>
    <string name="max_bpm">120</string>

    <!--shortboard labels-->
    <string name="label_aed">AED</string>
    <string name="label_bpm">BPM</string>
    <string name="label_predict">PREDICT</string>
    <string name="label_profile">PROFILE</string>

    <!--question-->
    <string name="bpmtext1">심박수는 온도, 자세, 활동, 감정 등의 요인에 따라 \n영향을 받을 수 있습니다. </string>
    <string name="bpmtext2">휴대폰 뒤 센서에 \n 손가락을 가져다 주세요. </string>
    <string name="bpmtext3">완료 될 때 까지 \n 손을 움직이지 마세요.  </string>

    <!--aed activity-->
    <string name="aed_button">\nAED 위치</string>
    <string name="aed_button_change">\n다른 AED 위치 찾기</string>
    <string name="tab">\u0009</string>
    <string name="aedtext">
        짧은 순간에 강한 전류를 심장에 통과시켜  심장이 다시 정상적인 전기활동을 할 수 있도록 유도하는 것이다.
    </string>
    <string name="aedlink">https://www.e-gen.or.kr/egen/aed_usage.do</string>
</resources>
