<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <!-- 타이틀바 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="How To"
        android:textSize="20sp" />

    <LinearLayout
        android:background="@drawable/btn_done"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>
    <!-- //end 타이틀바 -->

    <!-- Notice -->

    <LinearLayout
        android:background="@color/white"
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/bpmtext1"
            android:id="@+id/txtText"
            android:textSize="10sp"
            android:textColor="#000"
            android:alpha="0.87"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/bpm_image1">
                </ImageView>
                <TextView
                    android:textAlignment="center"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="13dp"
                    android:textSize="8sp"
                    android:text="@string/bpmtext2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <ImageView
                android:layout_marginTop="50dp"
                android:src="@drawable/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </ImageView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:src="@drawable/bpm_image2">
                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="17dp"
                    android:text="@string/bpmtext3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="8sp"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- Notice -->

    <View
        android:background="#66bdbdbd"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <!-- 닫기 버튼 -->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:textStyle="bold"
            android:text="CLOSE"
            android:textSize="15sp"
            android:textColor="#FFBB33"
            android:padding="16dp"
            android:gravity="center"
            android:background="#00000000"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:onClick="mOnClose"/>
    </LinearLayout>
    <!--// 닫기 버튼 -->
</LinearLayout>
