<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/aphiPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/lowAphi"
        android:textColor="#042E52"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/cholBar" />

    <TextView
        android:id="@+id/aphiPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:textColor="#042E52"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/aphiBar"
        app:layout_constraintTop_toBottomOf="@+id/aphiPredict" />

    <ProgressBar
        android:id="@+id/aphiBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="13dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:max="100"
        android:progressDrawable="@drawable/custom_progressbar"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/aphiPredict" />

    <TextView
        android:id="@+id/smokePredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/nonSmoke"
        android:textColor="#042E52"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/aphiBar" />

    <TextView
        android:id="@+id/smokePct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:textColor="#042E52"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/smokeBar"
        app:layout_constraintTop_toBottomOf="@+id/smokePredict" />

    <ProgressBar
        android:id="@+id/smokeBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="13dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:max="100"
        android:progressDrawable="@drawable/custom_progressbar"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/smokePredict" />

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:text="@string/predict_info"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/user_name"
        app:layout_constraintStart_toEndOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="OOO"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/cardio_pst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circularProgressbar" />

    <ProgressBar

        android:id="@+id/circularProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:indeterminate="false"
        android:max="100"
        android:progress="50"
        android:progressDrawable="@drawable/circular"
        android:secondaryProgress="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/circularProgressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/agePredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/TenYearsLater"
        android:textColor="#042E52"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toTopOf="@+id/pctView" />

    <ProgressBar
        android:id="@+id/ageBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="13dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:max="100"
        android:progressDrawable="@drawable/custom_progressbar"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/agePredict" />

    <TextView
        android:id="@+id/agePct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:textColor="#042E52"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ageBar"
        app:layout_constraintTop_toBottomOf="@+id/agePredict" />

    <TextView
        android:id="@+id/cholPredict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/lowChol"
        android:textColor="#042E52"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/ageBar" />

    <ProgressBar
        android:id="@+id/cholBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="13dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="13dp"
        android:max="100"
        android:progressDrawable="@drawable/custom_progressbar"
        app:layout_constraintStart_toStartOf="@id/pctView"
        app:layout_constraintTop_toBottomOf="@+id/cholPredict" />

    <TextView
        android:id="@+id/cholPct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:textColor="#042E52"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cholBar"
        app:layout_constraintTop_toBottomOf="@+id/cholPredict" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/pctView"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/view_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

</androidx.constraintlayout.widget.ConstraintLayout>